--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,5 +18,12 @@ steps:
 
 - script: |
     npm install
-    npm test
+    npm test --verbose
   displayName: 'Run backend tests'
+
+- task: PublishTestResults@2
+  inputs:
+    testResultsFormat: 'JUnit'  # Pode ser outro formato, se necessário
+    testResultsFiles: '**/test-results.xml'  # Altere para o local correto, se estiver gerando o arquivo de resultados
+    mergeTestResults: true
+    testRunTitle: 'Backend Test Results'
