--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -24,6 +24,6 @@ steps:
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'  # Pode ser outro formato, se necessário
-    testResultsFiles: '**/test-results.xml'  # Altere para o local correto, se estiver gerando o arquivo de resultados
+    testResultsFiles: 'test-results/test-results.xml'  # Altere para o local correto, se estiver gerando o arquivo de resultados
     mergeTestResults: true
     testRunTitle: 'Backend Test Results'
